--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
     </style>
   </head>
   <body>
-    <h1>Todo App: KubernetesTry/h1>
+    <h1>Todo App: Lets Start/h1>
 
     <!-- Add Task Form -->
     <form method="post">
